<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/encryptTXT"
        android:id="@+id/encryptTXT"/>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/decryptTXT"
        android:id="@+id/decryptTXT"/>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/encryptJPG"
        android:id="@+id/encryptJPG"/>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/decryptJPG"
        android:id="@+id/decryptJPG"/>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/encryptRAR"
        android:id="@+id/encryptRAR"/>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/decryptRAR"
        android:id="@+id/decryptRAR"/>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/encryptInternalTXT"
        android:id="@+id/encryptInternalTXT"/>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/decryptInternalTXT"
        android:id="@+id/decryptInternalTXT"/>
</LinearLayout>